[gd_scene load_steps=12 format=3 uid="uid://cj0ioujq1uhw4"]

[ext_resource type="Script" uid="uid://bk5bbiddceqwd" path="res://scripts/character_body_3d.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://bxd8em718n4ax" path="res://scenes/steampunk_rifle.tscn" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://dwmk60qpyq7u0" path="res://scenes/steampunk_machingun.tscn" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://celbgpy2ejkpv" path="res://scenes/rocket_launcher.tscn" id="4_dqkch"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rwgxs"]
lightmap_size_hint = Vector2i(17, 14)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4wyf3"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "LowerMG"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Steampunk Machingun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.189, -0.261, -0.35), Vector3(0.189, -1, -0.35)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "LowerRifles"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Steampunk Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.320177, -0.294842, -0.631202), Vector3(0.32, -1.3, -0.631)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Steampunk Rifle Secondary:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.32, -0.295, -0.631), Vector3(-0.32, -1.3, -0.631)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Steampunk Machingun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.189, -0.261, -0.35)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Steampunk Rifle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.32, -1.5, -0.631)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Steampunk Rifle Secondary:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.32, -1.5, -0.631)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RocketLauncher:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.305, 0.55, 0.05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RocketLauncher:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5708, 1.27409)]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "LowerRPG"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RocketLauncher:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.24, -0.4, -0.555), Vector3(0.305, 0.55, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RocketLauncher:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(0, 1.5708, 1.27409)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlg0r"]
_data = {
&"LowerMG": SubResource("Animation_qhqgy"),
&"LowerRPG": SubResource("Animation_tuyoq"),
&"LowerRifles": SubResource("Animation_qlg0r"),
&"RESET": SubResource("Animation_dqkch")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_rwgxs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_4wyf3")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Steampunk Rifle" parent="Head/Camera3D" instance=ExtResource("2_g2els")]
transform = Transform3D(0.999703, 0.0149977, 0.0191694, -0.0139417, 0.99844, -0.0540788, -0.0199505, 0.0537956, 0.998353, 0.32, -1.5, -0.631)

[node name="Steampunk Rifle Secondary" parent="Head/Camera3D" instance=ExtResource("2_g2els")]
transform = Transform3D(0.999732, 0.0129215, -0.0191694, -0.0139417, 0.99844, -0.0540788, 0.0184406, 0.0543316, 0.998353, -0.32, -1.5, -0.631)

[node name="Steampunk Machingun" parent="Head/Camera3D" instance=ExtResource("3_qhqgy")]
transform = Transform3D(0.999962, 0, -0.00872654, 0, 1, 0, 0.00872654, 0, 0.999962, 0.189, -0.261, -0.35)

[node name="RocketLauncher" parent="Head/Camera3D" instance=ExtResource("4_dqkch")]
transform = Transform3D(-1.278e-08, 4.18014e-08, 1, 0.956305, 0.292372, 0, -0.292372, 0.956305, -4.37114e-08, 0.305, 0.55, 0.05)

[node name="AimRay" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
target_position = Vector3(0, -1, -100)
collision_mask = 2
collide_with_areas = true

[node name="AimRayend" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101.5)

[node name="WeaponSwitching" type="AnimationPlayer" parent="Head/Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_qlg0r")
}
